objects/SVMXC__RMA_Shipment_Line__c.object
<CustomObject>
    <description>ServiceMax uses a common tab Parts Orders as a home for RMA and Shipment orders both. Parts Order Line lists parts returned or shipped.</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Parts Order Lines</relationshipLabel>
        <relationshipName>Parts_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Configuration_File_Sent__c</fullName>
        <label>Configuration File Sent?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Depot_Repair_Work_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Depot Repair Work Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Errors__c</fullName>
        <label>Errors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Failure_Code_Second_Level__c</fullName>
        <label>Failure Code Second Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Failure_Code__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>27V Path</fullName>
                </value>
                <value>
                    <fullName>Alignment</fullName>
                </value>
                <value>
                    <fullName>Board Level</fullName>
                </value>
                <value>
                    <fullName>Bootup</fullName>
                </value>
                <value>
                    <fullName>bracket</fullName>
                </value>
                <value>
                    <fullName>Burnt</fullName>
                </value>
                <value>
                    <fullName>Chip</fullName>
                </value>
                <value>
                    <fullName>Contaminated</fullName>
                </value>
                <value>
                    <fullName>Corrosion</fullName>
                </value>
                <value>
                    <fullName>C-Stack</fullName>
                </value>
                <value>
                    <fullName>Customer Power</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>DCB</fullName>
                </value>
                <value>
                    <fullName>Dead on Arrival</fullName>
                </value>
                <value>
                    <fullName>Debug</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>DIAG</fullName>
                </value>
                <value>
                    <fullName>Diags</fullName>
                </value>
                <value>
                    <fullName>DIMMs</fullName>
                </value>
                <value>
                    <fullName>Down Rev</fullName>
                </value>
                <value>
                    <fullName>EDRAM</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Electronic ID</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Fan</fullName>
                </value>
                <value>
                    <fullName>Fan Controller</fullName>
                </value>
                <value>
                    <fullName>Firmware</fullName>
                </value>
                <value>
                    <fullName>Front Cover</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Code_Third_Level__c</fullName>
        <label>Failure Code Third Level</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Failure_Code_Second_Level__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ABIST</fullName>
                </value>
                <value>
                    <fullName>Air Condition</fullName>
                </value>
                <value>
                    <fullName>Alignment</fullName>
                </value>
                <value>
                    <fullName>Art</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>Burnt</fullName>
                </value>
                <value>
                    <fullName>CDP</fullName>
                </value>
                <value>
                    <fullName>CDP Cable</fullName>
                </value>
                <value>
                    <fullName>Chassis</fullName>
                </value>
                <value>
                    <fullName>Corrosion</fullName>
                </value>
                <value>
                    <fullName>C-stack</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>DCB</fullName>
                </value>
                <value>
                    <fullName>DCC</fullName>
                </value>
                <value>
                    <fullName>DCC_CON1</fullName>
                </value>
                <value>
                    <fullName>DCC_CON2</fullName>
                </value>
                <value>
                    <fullName>DCC_CON3</fullName>
                </value>
                <value>
                    <fullName>Dcc_con 4</fullName>
                </value>
                <value>
                    <fullName>DCC_MEM</fullName>
                </value>
                <value>
                    <fullName>down rev</fullName>
                </value>
                <value>
                    <fullName>Earthquake</fullName>
                </value>
                <value>
                    <fullName>edram</fullName>
                </value>
                <value>
                    <fullName>Embedded Memory</fullName>
                </value>
                <value>
                    <fullName>Fiber Cable</fullName>
                </value>
                <value>
                    <fullName>filler tank</fullName>
                </value>
                <value>
                    <fullName>fitting</fullName>
                </value>
                <value>
                    <fullName>Fittings</fullName>
                </value>
                <value>
                    <fullName>Glitch</fullName>
                </value>
                <value>
                    <fullName>heat exchanger</fullName>
                </value>
                <value>
                    <fullName>Hi/Lo Pressure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Failure_Code__c</fullName>
        <label>Failure Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12V PSU</fullName>
                </value>
                <value>
                    <fullName>24V PSU</fullName>
                </value>
                <value>
                    <fullName>27V PSU</fullName>
                </value>
                <value>
                    <fullName>ART</fullName>
                </value>
                <value>
                    <fullName>B2B Cable</fullName>
                </value>
                <value>
                    <fullName>Back Plane</fullName>
                </value>
                <value>
                    <fullName>Buffer Cable</fullName>
                </value>
                <value>
                    <fullName>Buffer Card</fullName>
                </value>
                <value>
                    <fullName>Cable</fullName>
                </value>
                <value>
                    <fullName>CDP</fullName>
                </value>
                <value>
                    <fullName>Chassis</fullName>
                </value>
                <value>
                    <fullName>Clock Cable</fullName>
                </value>
                <value>
                    <fullName>Cooling</fullName>
                </value>
                <value>
                    <fullName>Cover</fullName>
                </value>
                <value>
                    <fullName>DCC</fullName>
                </value>
                <value>
                    <fullName>Down Rev Part</fullName>
                </value>
                <value>
                    <fullName>Fan</fullName>
                </value>
                <value>
                    <fullName>HDDC</fullName>
                </value>
                <value>
                    <fullName>Interposer</fullName>
                </value>
                <value>
                    <fullName>Logic Board</fullName>
                </value>
                <value>
                    <fullName>LVPSU</fullName>
                </value>
                <value>
                    <fullName>MBS Box</fullName>
                </value>
                <value>
                    <fullName>MBS Cable</fullName>
                </value>
                <value>
                    <fullName>MCM</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>NCC</fullName>
                </value>
                <value>
                    <fullName>NMP</fullName>
                </value>
                <value>
                    <fullName>OCA</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>PDU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Host_Name__c</fullName>
        <formula>SVMXC__Serial_Number__r.Host_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Host Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_SN_In__c</fullName>
        <description>Installed Product Serial Number In</description>
        <inlineHelpText>Installed Product Serial Number In</inlineHelpText>
        <label>SN IN</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_SN_Out__c</fullName>
        <description>Installed Product Serial Number Out</description>
        <inlineHelpText>Installed Product Serial Number Out</inlineHelpText>
        <label>SN Out</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installed_Product_SN__c</fullName>
        <formula>SVMXC__Serial_Number__r.SVMXC__Serial_Lot_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installed Product SN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_SN__c</fullName>
        <formula>if( SVMXC__Serial_Number__c&lt;&gt; null &amp;&amp; SVMXC__Serial_Number__r.SVMXC__Top_Level__c&lt;&gt;null, SVMXC__Serial_Number__r.SVMXC__Top_Level__r.SVMXC__Serial_Lot_Number__c,SVMXC__Serial_Number__r.SVMXC__Serial_Lot_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Master SN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Serial_Number__c</fullName>
        <label>New Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Old Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Parts Order Lines (Old Product)</relationshipLabel>
        <relationshipName>Parts_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Serial_Number__c</fullName>
        <label>Old Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_N_Description__c</fullName>
        <formula>SVMXC__Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>P/N Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Description__c</fullName>
        <label>Parts Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parts_Type__c</fullName>
        <label>Parts Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Serialized Products</fullName>
                </value>
                <value>
                    <fullName>Non Serialized Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patch_Level__c</fullName>
        <formula>SVMXC__Serial_Number__r.Patch_Level__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patch Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Problem_Description__c</fullName>
        <label>Problem Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <formula>SVMXC__Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <formula>SVMXC__Product__r.Description</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <formula>SVMXC__Product__r.Product_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Failure_Description__c</fullName>
        <label>RMA Failure Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolution_Code__c</fullName>
        <label>Resolution Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Power cycle</fullName>
                </value>
                <value>
                    <fullName>NCC Reboot</fullName>
                </value>
                <value>
                    <fullName>Configmgr reset</fullName>
                </value>
                <value>
                    <fullName>FW upgrade</fullName>
                </value>
                <value>
                    <fullName>Patch/Hotfix</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Reseated</fullName>
                </value>
                <value>
                    <fullName>Repaired</fullName>
                </value>
                <value>
                    <fullName>Environment Problem Resolved (cooling / power)</fullName>
                </value>
                <value>
                    <fullName>Reinstall</fullName>
                </value>
                <value>
                    <fullName>Replace Host</fullName>
                </value>
                <value>
                    <fullName>Not reproducible</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Markout</fullName>
                </value>
                <value>
                    <fullName>FPGA Reload</fullName>
                </value>
                <value>
                    <fullName>Unresolved</fullName>
                </value>
                <value>
                    <fullName>Host Reboot</fullName>
                </value>
                <value>
                    <fullName>Reimaged</fullName>
                </value>
                <value>
                    <fullName>Upgraded</fullName>
                </value>
                <value>
                    <fullName>Configured</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>re-calibrated coolant level sensor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMVX_Failure_Analysis_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is a failure analysis required?</description>
        <label>Failure Analysis Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SMVX_Non_Conformence_Catergory__c</fullName>
        <label>Non-Conformence Catergory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cosmetic</fullName>
                </value>
                <value>
                    <fullName>Functional</fullName>
                </value>
                <value>
                    <fullName>Nonfunctional</fullName>
                </value>
                <value>
                    <fullName>Mechanical</fullName>
                </value>
                <value>
                    <fullName>Damage</fullName>
                </value>
                <value>
                    <fullName>Wrong Part</fullName>
                </value>
                <value>
                    <fullName>Labeling</fullName>
                </value>
                <value>
                    <fullName>Programming</fullName>
                </value>
                <value>
                    <fullName>test2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Quantity2__c</fullName>
        <description>Actual number of units shipped/received vs. expected quantity</description>
        <inlineHelpText>Actual number of units shipped/received vs. expected quantity</inlineHelpText>
        <label>Actual Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Receipt_Date__c</fullName>
        <description>Date on which the product was actually received</description>
        <inlineHelpText>Date on which the product was actually received</inlineHelpText>
        <label>Actual Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Actual_Ship_Date__c</fullName>
        <description>Date on which the product was actually shipped</description>
        <inlineHelpText>Date on which the product was actually shipped</inlineHelpText>
        <label>Actual Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Canceled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that canceled this shipment line. This is set automatically when a user cancels the shipment line.</description>
        <inlineHelpText>User that canceled this shipment line. This is set automatically when a user cancels the shipment line.</inlineHelpText>
        <label>Canceled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RMA_Shipment_Line_Canceled_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Canceled_On__c</fullName>
        <description>Date/time when this shipment line was canceled. This is set automatically when a user cancels the shipment line.</description>
        <inlineHelpText>Date/time when this shipment line was canceled. This is set automatically when a user cancels the shipment line.</inlineHelpText>
        <label>Canceled On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Case_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference to the originating Case Line record</description>
        <label>Case Line</label>
        <referenceTo>SVMXC__Case_Line__c</referenceTo>
        <relationshipLabel>Parts Order Lines</relationshipLabel>
        <relationshipName>Parts_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that closed this RMA/shipment order.</description>
        <inlineHelpText>User that closed this RMA/shipment order.</inlineHelpText>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RMA_Shipment_Line_Closed_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Closed_On__c</fullName>
        <description>Date/time when this RMA/Shipment line was closed.</description>
        <inlineHelpText>Date/time when this RMA/Shipment line was closed.</inlineHelpText>
        <label>Closed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Delivered_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that delivered the product</description>
        <label>Delivered By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Parts_Order_Lines1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Delivered_On__c</fullName>
        <description>Date/time when the product was delivered</description>
        <label>Delivered On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Delivered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the product has been delivered or not</description>
        <label>Delivered?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Delivery_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Parts Order Lines (Delivery Location)</relationshipLabel>
        <relationshipName>Parts_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Discount_Percentage__c</fullName>
        <description>Percentage discount to be applied on the Parts Order Line Price</description>
        <inlineHelpText>Percentage discount to be applied on the Parts Order Line Price</inlineHelpText>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SVMXC__Disposition_Instructions__c</fullName>
        <description>Any special handling notes for product disposition</description>
        <inlineHelpText>Any special handling notes for product disposition</inlineHelpText>
        <label>Disposition Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Disposition__c</fullName>
        <description>Type of action to be taken by receiving department when the product arrives</description>
        <inlineHelpText>Type of action to be taken by receiving department when the product arrives</inlineHelpText>
        <label>Disposition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HFE</fullName>
                </value>
                <value>
                    <fullName>Retest &amp; Restock</fullName>
                </value>
                <value>
                    <fullName>Part Remains Onsite as Spare</fullName>
                </value>
                <value>
                    <fullName>Part Swap</fullName>
                </value>
                <value>
                    <fullName>Scrap</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Salvage</fullName>
                </value>
                <value>
                    <fullName>Restock</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Entitled_Exchange_Type__c</fullName>
        <label>Entitled Exchange Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance Exchange</fullName>
                </value>
                <value>
                    <fullName>Return Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Entitlement_Status__c</fullName>
        <label>Entitlement Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Entitled To Warranty</fullName>
                </value>
                <value>
                    <fullName>Not Entitled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Expected_Condition__c</fullName>
        <description>Condition of the product returned</description>
        <inlineHelpText>Condition of the product returned</inlineHelpText>
        <label>Expected Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Good/Working</fullName>
                </value>
                <value>
                    <fullName>Defective</fullName>
                </value>
                <value>
                    <fullName>Shipping Damage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Expected_Quantity2__c</fullName>
        <description>Number of products returned. Usually 1 for serialized products</description>
        <inlineHelpText>Number of products returned. Usually 1 for serialized products</inlineHelpText>
        <label>Expected Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Expected_Receipt_Date__c</fullName>
        <description>Date on which the product is expected to be received at the depot/factory/warehouse</description>
        <inlineHelpText>Date on which the product is expected to be received at the depot/factory/warehouse</inlineHelpText>
        <label>Expected Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Expected_Ship_Date__c</fullName>
        <description>Date on which the product is expected to be shipped to the customer/field location</description>
        <inlineHelpText>Date on which the product is expected to be shipped to the customer/field location</inlineHelpText>
        <label>Expected Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Fulfillment_Qty__c</fullName>
        <label>Fulfillment Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Line_Price2__c</fullName>
        <description>Price for Line Item.</description>
        <inlineHelpText>Price for Line Item.</inlineHelpText>
        <label>Line Price</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Line_Status__c</fullName>
        <description>Current status of the RMA/Shipment line.</description>
        <inlineHelpText>Current status of the RMA/Shipment line.</inlineHelpText>
        <label>Line Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Picked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Line_Type__c</fullName>
        <description>Internal line type of the RMA/Shipment line. Not displayed.</description>
        <inlineHelpText>Internal line type of the RMA/Shipment line. Not displayed.</inlineHelpText>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound (RMA)</fullName>
                </value>
                <value>
                    <fullName>Outbound (Shipment)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Master_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Order Line</label>
        <referenceTo>SVMXC__RMA_Shipment_Line__c</referenceTo>
        <relationshipLabel>Parts Order Lines</relationshipLabel>
        <relationshipName>Parts_Order_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Packing_Instructions__c</fullName>
        <description>Any special handling notes for shipping department</description>
        <inlineHelpText>Any special handling notes for shipping department</inlineHelpText>
        <label>Packing Instructions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Parts_Request_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The ServiceMax parts request line for which this shipment line was created.</description>
        <inlineHelpText>The ServiceMax parts request line for which this shipment line was created.</inlineHelpText>
        <label>Parts Request Line</label>
        <referenceTo>SVMXC__Parts_Request_Line__c</referenceTo>
        <relationshipName>RMA_Shipment_Line</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Picked_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that picked the product for shipment</description>
        <label>Picked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Parts_Order_Lines2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Picked_On__c</fullName>
        <description>Date/time when the product was picked for shipment</description>
        <label>Picked On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Picked_Qty__c</fullName>
        <description>Quantity picked for shipment</description>
        <label>Picked Qty</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Picked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the product has been picked for shipment or not</description>
        <label>Picked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Posted_To_Inventory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag Indicates if this RMA/Shipment line has been posted to inventory or not.</description>
        <inlineHelpText>Flag Indicates if this RMA/Shipment line has been posted to inventory or not.</inlineHelpText>
        <label>Posted To Inventory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the product to be shipped/received. Is a lookup to an existing salesforce product record</description>
        <inlineHelpText>Name of the product to be shipped/received. Is a lookup to an existing salesforce product record</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>RMA_Shipment_Line</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>